# sgemm_xymc

./: .gitignore  CMakeLists.txt  plot_performance.py
include/: PTX.h  sgemm_common.h
src/: main.cu  sgemm_cublas.cu  sgemm_cublas_tensor_core.cu  sgemm_v0_global_memory.cu  sgemm_v10_tensor_core_vectorized.cu  sgemm_v11_tensor_core_cp_async.cu  sgemm_v12_tensor_core_mma.cu  sgemm_v13_tensor_core_mma_swizzle.cu  sgemm_v14_tensor_core_mma_kStage.cu  sgemm_v1_shared_memory.cu  sgemm_v2_tiling.cu  sgemm_v3_vectorized.cu  sgemm_v4_register.cu  sgemm_v5_transpose.cu  sgemm_v6_double_buffer.cu  sgemm_v7_1_bank_conflict_finished.cu  sgemm_v7_bank_conflict.cu  sgemm_v8_tensor_core.cu  sgemm_v9_tensor_core_bank_conflict.cu  tensor_core.cu  test_sgemm.cu  utils.cu
